updated image files
updated css file.

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -6,12 +6,18 @@
 </head>
 <body>   		
 	<header>
-   		<h1 id="middle-title">Red Velvet Bakery</h1>
+   		<h1 id="middle-title">Red Velvet Cake</h1>
    		<img src="images/red_velvet_cake_2.jpg">
 	</header>
 	<p> Prepared with the finest ingredients.  Gluten free also available.</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<p> Established 1960.</p>
+	<header>
+   		<h2 id="middle-title">Orange Cheescake</h1>
+   		<img src="images/image_1.jpg">
+   		<h2 id="middle-title">Chocolate Lay Cake</h1>
+   		<img src="images/image_2.jpg">
+	</header>
 	<p>Written by <a href="mailto:webmaster@example.com">Gerald Bessellieu</a>.</p>
 	<p>Visit us at:<br>Example.com</p>
 	<address>Box 564, Disneyland<br>USA</address>
