unit_5 with validator errors
unit_5 with validator errors

--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -11,13 +11,15 @@
 
 <body>
 	<section id="wrapper">
+		<div>
 		<header>
 			<h1>Red Velvet Bakery</h1>
 		</header>
+		</div>
 
 		<div>
 	   		<h2 id="middle-title">Red Velvet Cake</h2>
-	   		<img src="images/red_velvet_cake_2.jpg">
+	   		<img src="images/red_velvet_cake_2.jpg" alt="Red Velvet Cake">
 		</div>
 
 		<section>
@@ -27,17 +29,15 @@
 		</section>
 		
 		<section>
-	   		<img src="images/image_1.jpg">
+	   		<img src="images/image_1.jpg" alt="Orange Cheescake">
 	   		<h2 id="middle-title">Orange Cheesecake</h2>
 	   		<h2 id="middle-title">Chocolate Layer Cake</h2>
-	   		<img src="images/image_2.jpg">
+	   		<img src="images/image_2.jpg" alt="Chocolate Layer Cake">
 		</section>
 
 		<footer>
-			<p>Written by <a href="mailto:webmaster@example.com">Gerald Bessellieu</a>.</p>
-			<p>Visit us at:<br>Example.com</p>
-			<address>Box 564, Disneyland<br>USA</address>
-		<footer>
+			<p>&copy; 2016 GEB.com<p>
+		</footer>
 	</section>
 </body>
 
