--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
 	<title>Red Velvet Bakery</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=BenchNine" rel="stylesheet">
@@ -30,8 +31,8 @@
 		
 		<section>
 	   		<img src="images/image_1.jpg" alt="Orange Cheescake">
-	   		<h2 id="middle-title">Orange Cheesecake</h2>
-	   		<h2 id="middle-title">Chocolate Layer Cake</h2>
+	   		<h2 class="mid-title">Orange Cheesecake</h2>
+	   		<h2 class="mid-title">Chocolate Layer Cake</h2>
 	   		<img src="images/image_2.jpg" alt="Chocolate Layer Cake">
 		</section>
 
