Unit_6 HTML changes
Unit_6 HTML changes

--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -24,8 +24,8 @@
 		</div>
 
 		<section>
-			<p id="lorem">Prepared with the finest ingredients. Gluten free available.</p>
-			<p id="lorem">The Red Velvet Legend continues because things are done the old fashioned way. Our bakers and decorators use baking methods and customs of an earlier time, making fresh handmade goods every day. The plan is to keep it that way. </p>
+			<p class="lorem">Prepared with the finest ingredients. Gluten free available.</p>
+			<p class="lorem">The Red Velvet Legend continues because things are done the old fashioned way. Our bakers and decorators use baking methods and customs of an earlier time, making fresh handmade goods every day. The plan is to keep it that way. </p>
 			<p>Established 1960.</p>
 		</section>
 		
