--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -5,6 +5,7 @@
 <head>
 	<title>Red Velvet Bakery</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=BenchNine" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -21,7 +22,7 @@
 
 		<section>
 			<p> Prepared with the finest ingredients.  Gluten free also available.</p>
-			<p id="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p id="lorem">The Red Velvet Legend continues because things are done the old fashioned way. Our bakers and decorators use baking methods and customs of an earlier time, making fresh handmade goods every day. The plan is to keep it that way. </p>
 			<p>Established 1960.</p>
 		</section>
 		
